# clion-and-cmake

./: .gitignore  centos7 gcc升级.md  gcc-update.sh
clion/action3/: CMakeLists.txt  main.cpp
clion/action3/example/include/: shared.h
clion/protobuf/: Protobuf在Cmake中的正确使用方法详解.md  关于深度学习Protobuf在Cmake中的正确使用.md
cmake/: CMake中文手册.docx  全网最细的CMake教程！(强烈建议收藏).md
cmake/cmake best practice/: cmake best pratctice course.md
cmake/cmake best practice/ch05-CMake-demo/src/: main
cmake/cmake best practice/ch09-demo/: CMakeLists.txt
cmake/cmake best practice/ch12-demo/: CMakeLists.txt
cmake/cmake best practice/ch13-demo/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch13-demo/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch22-scope-of-variable/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch22-scope-of-variable/src/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch41_manage_compiler_linker/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/ex02_static/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/ex03_file/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/ex04_directory/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/ex05_config_file_packge/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/ex05_consumer/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch42_install/ex06_pack/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch44_cpack/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch51_thirdparty/: CMakeLists.txt
cmake/cmake best practice/cmake-code-example/ch52_add_custom_target/: CMakeLists.txt
cmake/cmake best practice/study_cmake/: CMakeLists.txt
cmake/cmake-best-practice/: cmake-best-pratctice-course.md
cmake/cmake-best-practice/cmake-code-example/: CMakeLists.txt
cmake/cmake-best-practice/cmake-code-example/ch20-define-function/: CMakeLists.txt
cmake/cmake-best-practice/cmake-code-example/ch41_manage_compiler_linker/src/: main.cpp
cmake/example1/: CMakeLists.txt  helloworld.cpp
cmake/example2/: CMakeLists.txt
cmake/example3/: CMakeLists.txt
cmake/example3/example/: CMakeLists.txt  main.cpp
cmake/example3/src/shared/: CMakeLists.txt
cmake/example3/src/shared/src/: shared.cpp
cmake/example3/src/static/: CMakeLists.txt
cmake/example3/src/static/include/: static.h
cmake/example3/src/static/src/: static.cpp
cmake/modern cmake/: add_custom_command：（1）为某一个工程添加一个自定义的命令.md  在构建的时运行命令.md
cmake/official-document/Command-Line Tools/: cpack(1).md  ctest(1).md
cmake/official-document/Guides/: CMake Tutorial.md  使用依赖指南.md
cmake/official-document/Guides/tutorial-code/learn/Step1/: CMakeLists.txt  main.cpp
cmake/official-document/Reference Manuals/: cmake-compile-features(7).md  cmake-developer(7).md  cmake-env-variables(7).md  cmake-file-api(7).md  cmake-generator-expressions(7).md  cmake-generators(7).md  cmake-language(7).md  cmake-modules(7).md
cmake/official-document/Reference Manuals/cmake-commands(7)/: Project Commands.md
cmake/official-document/Reference Manuals/cmake-modules(7)/: AndroidTestUtilities.md  BundleUtilities.md  CheckCCompilerFlag.md  CheckCSourceCompiles.md  CheckCSourceRuns.md  CheckCXXCompilerFlag.md  CheckCXXSourceCompiles.md  CheckCXXSourceRuns.md  CheckCXXSymbolExists.md  CheckCompilerFlag.md  CheckFortranCompilerFlag.md  CheckFunctionExists.md  CheckIncludeFile.md  CheckIncludeFileCXX.md  CheckIncludeFiles.md  ExternalProject.md  FetchContent.md  GNUInstallDirs.md
cmake/official-document/Reference Manuals/cmake-variables(7)/: variables简介.md
cmake/official-document/交互式对话框/: ccmake(1).md
cmake/官方文档/: 简介.md
cmake/官方文档/Guides/: 用户交互指南.md
cmake/官方文档/cmake-3.24.1-tutorial-source/Step1/: CMakeLists.txt
cmake/官方文档/交互式对话框/: cmake-gui(1).md
cmake/官方文档/参考手册/: cmake-buildsystem(7).md  cmake-commands(7) — CMake 3.24.1 Documentation.mhtml
cmake/官方文档/参考手册/cmake-commands(7)/: CTest 命令.md  Scripting Commands.md  cmake-commands(7).md  cmake简介.md  脚本命令.md  项目命令.md
cmake/官方文档/命令行工具/: cmake(1).md
cmake/岁安慢煮酒/: cmake.md
cmake/岁安慢煮酒/demo/install/include/: config.h
cmake/岁安慢煮酒/demo/other_lib/: division.h  multiply.h
cmake/岁安慢煮酒/demo/src/: CMakeLists.txt  config.h.in  main.cpp
cmake/岁安慢煮酒/demo/src/calc/: CMakeLists.txt
