cmake_minimum_required(VERSION 3.23)
project(cmake-code-example)
#add_subdirectory(ch05-CMake-demo)
#add_subdirectory(ch09-demo)
#add_subdirectory(ch12-demo)
#add_subdirectory(ch13-demo)
#add_subdirectory(ch14-list)
#add_subdirectory(ch15-cache)
#add_subdirectory(ch16-property)
#add_subdirectory("ch17-if judge")
#add_subdirectory("ch18-while")
#add_subdirectory("ch19-foreach")
#add_subdirectory(ch20-define-function)
#add_subdirectory(ch21-macro-and-func)
add_subdirectory(ch22-scope-of-variable)